# agr_blast_service_configuration

./: .git-blame-ignore-revs  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: create_blast_db.yml  flybase.yml  validator.yml
conf/: global.yaml
conf/ALLIANCE/: databases.ALLIANCE.prod.json
conf/FB/: databases.FB.FB2022_04.json  databases.FB.FB2024_02.json  databases.FB.FB2024_04.json  databases.FB.FB2025_01.json  databases.FB.FB2025_03.json
conf/RGD/: databases.RGD.production.json  databases.RGD.production_new.json
conf/SGD/: databases.SGD.2022-06-22.json  databases.SGD.2024-03-27.json  databases.SGD.2024-06-06.json  databases.SGD.2024-06-07.json  databases.SGD.2024-06-13.json  databases.SGD.2025-10-03_combined.json  databases.SGD_fungal.2024-04-11.json  databases.SGD_fungal.2024-04-15.json  databases.SGD_fungal_test.2025-10-11.json  databases.SGD_test.2025-10-03.json  databases.SGD_test.2025-10-07.json
conf/WB/: databases.WB.WS285.json  databases.WB.WS286.json  databases.WB.WS291.json  databases.WB.WS292.json  databases.WB.WS293.json  databases.WB.WS294.json  databases.WB.WS295.json  databases.WB.WS296.json  databases.WB.WS297.json
conf/XB/: databases.XB.5.5.1.json
conf/ZFIN/: databases.ZFIN.production.json
docs/: README.md
schemas/: global_schema.json  metadata_schema.json
src/python/agr_blast_service_configuration/schemas/: global.py  metadata.py
tests/python/: test_metadata.py
