[tool.poetry]
name = "agr-blast-service-configuration"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "agr_blast_service_configuration"}]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^23.1.0"
jsonschema = "^4.17.3"
pyrsistent = "^0.19.3"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
